# investiga

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
data/: company_profiles.json
docs/: ai-semantic-layer.md  architecture.md  data-model.md  integrations-and-scraping.md  rules-catalog.md
docs/adr/: 0001-use-postgresql-as-primary-store.md  0002-use-rabbitmq-for-job-broker.md  0003-use-party-as-canonical-entity.md
docs/architecture/: ingestion_normalization_design.md
infra/docker/: docker-compose.yml
infra/migrations/: env.py  script.py.mako
infra/sql/: init.sql
legacy/data/: all_requests.json  company_cache.sqlite  despesas_orcadas.json  funcionarios_ordenados.json
legacy/exports/output_v2/: alvos_arvore.json  auditoria_matches.json  relatorio_fraudes_v2.md
legacy/probes/: click_menu.py  create_project.py  despesas_menu.html  find_links.py  inspect_frames.py  network_sniffer.py  network_sniffer2.py  portal.html  probe_api.py  probe_api2.py  probe_api3.py  probe_api4.py  probe_portal.py  probe_pw.py  screenshot.py  tijucas_transparencia.html
legacy/scrapers/: fetch_despesas.py  fetch_funcionarios.py
legacy/scrapers/scrapers/: check_anos.py  check_db_detail.py  check_types.py  discovery.py  discovery2.py  grid_dump.html  test_playwright.py  tijucas_scraper_detail.py  tijucas_scraper_list.py
legacy/sdk/tijucas_transparencia/: DEBUG_PAYLOAD.json  README.md  debug_tipo3.json  payload.json  pyproject.toml
legacy/sdk/tijucas_transparencia/scripts/: demo_filters.py  export_json.py  fetch_funcionarios.py
legacy/sdk/tijucas_transparencia/src/tijucas_transparencia/: __init__.py  config.py  exceptions.py  exporters.py  filters.py  http_client.py  normalizers.py  pagination.py  utils.py
legacy/sdk/tijucas_transparencia/src/tijucas_transparencia/endpoints/: dados_abertos.py  pessoal.py
legacy/v1_json_analysis/: analise_fraudes.json  analise_fraudes.py  cruzar_funcionarios_despesas.py
legacy/v2_target_engine/: main_v2.py  run_deep.py
(+38 files in other folders)
