[project]
name = "investiga-tijucas"
version = "0.1.0"
description = "Plataforma de ingestão, enriquecimento e detecção de risco em dados públicos municipais"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "playwright>=1.40",
    "dramatiq[rabbitmq]>=1.16",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "sentry-sdk[fastapi]>=2.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
ai = [
    "pgvector>=0.3",
]
arch = [
    "dependency-injector>=4.41",
]

[project.scripts]
investiga-cli = "investiga_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "apps/*/tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
