[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tijucas-transparencia"
version = "0.1.0"
description = "SDK para a API de Transparência de Tijucas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "python-dateutil",
    "tenacity",
    "pyarrow",
]
